--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <link href="http://www.xiag.ch/files/css/testtask-styles.css" rel="stylesheet">
-    <script src="js/init.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/controller.js"></script>
     <title>XIAG test task</title>
 </head>
 <body>
@@ -31,5 +28,6 @@
         </table>
     </form>
 </div>
+<script src="/scripts/main.js"></script>
 </body>
 </html>
